samples/_failures_safe/1761713081_fac446_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c221e5b8.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_c221e5b8.c:148:9: error: expected declaration or statement at end of input
  148 |         case STATE_READING: return "READING";
      |         ^~~~
./samples/SAFE/__tmp_c221e5b8.c:148:9: error: expected declaration or statement at end of input
